<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_control_common</name>
  <version>1.0.0</version>
  <description>ur control utilities lib</description>
  <license>MIT</license>
  <author>Zhivko Petrov</author>
  <maintainer email="zhivkopetrov90@gmail.com">Zhivko Petrov</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>cmake_helpers</build_depend>
  <build_depend>ros2_game_engine</build_depend>
  <build_depend>urscript_common</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>ur_dashboard_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>ros2_game_engine</exec_depend>
  <exec_depend>urscript_common</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
